[package]
name = "sjabloon"
version = "0.0.2"
edition = "2024"
description = "a crate for templating html"
authors = ["Julian Ollivieira"]
documentation = "https://docs.rs/sjabloon"
repository = "https://github.com/snx-rs/sjabloon"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
proc-macro2-diagnostics = "0.10.1"
quote = "1.0.40"
rstml = "0.12.1"
syn = "2.0.100"
